--- a/partials/products.html
+++ b/partials/products.html
@@ -1,1 +1,106 @@
-dsfasfs
+<h1 class="title-products">Vestidos de Mujer</h1>
+
+<div class="row">
+
+    <div class="col-xs-12">
+        <form>
+            <input class="search-input" type="search" name="search" placeholder="Busca el artículo">
+        </form>
+    
+        <select class="select-order">
+            <option value="">Precio más bajo</option>
+            <option value="">Precio más alto</option>
+            <option value="">Por opiniones</option>
+            <option value="">Por descuento</option>
+            
+        </select>
+        
+    </div>
+    
+    
+</div>
+
+<div class="row">
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto1.jpg" alt="producto1" width="100%"/>
+        <div class=" offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price">$29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto2.jpg" alt="producto2" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price"><del>$20.00</del> $29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto3.jpg" alt="producto3" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price">$29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto4.jpg" alt="producto4" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price"><del>$20.00</del> $29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto5.jpg" alt="producto5" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price">$29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto6.jpg" alt="producto6" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price"><del>$20.00</del> $29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto7.jpg" alt="producto7" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price">$29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto8.jpg" alt="producto8" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price"><del>$20.00</del> $29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto9.jpg" alt="producto9" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price">$29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto10.jpg" alt="producto10" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price"><del>$20.00</del> $29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto11.jpg" alt="producto11" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price">$29.98</strong>
+    </a>
+    <a href="#" class="col-m-4 col-s-6 product-box">
+        <img src="img/producto12.jpg" alt="producto12" width="100%"/>
+        <div class="hidden offer">Oferta</div>
+        <h3>Vestido cruzado largo</h3>
+        <strong class="price"><del>$20.00</del> $29.98</strong>
+    </a>
+    
+</div>
+
+<ul class="pagination">
+    <li><a href="#" class="active">1</a></li>
+    <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li>
+    <li>...</li>
+    <li><a href="#">10</a></li>
+</ul>
+    
