--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,4 +3,7 @@
 @import "grid.css";
 @import "menu.css";
 @import "products.css";
+@import "aside.css";
+@import "footer.css";
 
+@import "image-effects.css";
