--- a/partials/aside.html
+++ b/partials/aside.html
@@ -1,1 +1,23 @@
-fdgafsdf
+<aside class="row">
+    
+    <a href="#" class="col-xs-3 col-s-3 col-m-3 col-l-12">
+        <img src="img/shopping-cart.svg" alt="Carrito de compra" width="40">
+        <p>0 artículos en el carrito</p>
+    </a>
+
+    <a href="#" class="col-xs-3 col-s-3 col-m-3 col-l-12">
+        <img src="img/my-account.svg" alt="Carrito de compra" width="40">
+        <p>Mi cuenta</p>
+    </a>
+
+    <a href="#" class="col-xs-3 col-s-3 col-m-3 col-l-12">
+        <img src="img/favorites.svg" alt="Carrito de compra" width="40">
+        <p>Artículos favoritos</p>
+    </a>
+
+    <a href="#" class="col-xs-3 col-s-3 col-m-3 col-l-12">
+        <img src="img/newsletter.svg" alt="Carrito de compra" width="40">
+        <p>Suscribete a nuestra newsletter</p>
+    </a>
+
+</aside>
